# Personal-AI-Assistant

./: .gitignore  DEPLOYMENT.md  README.md  atlas-finance-module-spec.md  main.py  pyproject.toml  telegram-reminder-agent-spec.md
scripts/: google_calendar_oauth.py  ingest_vault.py  sync_vault.cmd  test_retrival_tool.py  watch_vault.ps1
src/api/: main.py
src/db/: conver_sqlite.py  finance_sqlite.py  vault_db.py
src/llm/: conversation_context.py  first_agent.py  langchain_agent.py  model.py  prompts.py  react_agent.py
src/logging/: agent_event_log.py
src/retrieval/: rag_pipeline.py  search_notes.py  vault_manifest.py
src/tools/: general.py  google_calendar.py  obsidian.py  todos.py
src/web/: app.js  index.html  styles.css
src/web/static/: app.js  styles.css
