[project]
name = "ai-agentss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.7",
    "pillow>=12.3.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "tesseract>=0.1.3",
]
