[project]
name = "ai-agentss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "google-api-python-client>=2.198.0",
    "google-auth>=2.55.2",
    "google-auth-oauthlib>=1.4.0",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.7",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sentence-transformers>=5.6.0",
    "tesseract>=0.1.3",
    "uvicorn[standard]>=0.50.0",
]
